# data-visualize

./: README.md  pyproject.toml  test.py  ~$Vew site in window, pycham.pptx
Javascript/JavaMap/: Index.html  IndexImage.html  IndexImageBlack.html  IndexPalace.html  IndexStudy.html  app.py
Javascript/JavaMap/templates/: hospitals_map.html  index.html
SGIS_API/: SGIS.py
SeonJae_branch/: App.py
SeonJae_branch/client/pages/: Page2.py
SeonJae_branch/model/: operator_.py  sma_app.py  window.py
google_maps/: Untitled.ipynb  Vew site in window, pycham.pptx  View_site_1.py  View_site_2.py  View_site_3.py  pycham_study.py  강원대학교.html
kakao_developers/: Culture.py  Culture2.py  Klocation.py  Klocation2.py  api_manager.py  building_location.html  building_location_with_nearby.html  building_locations.xlsx  building_locations_map.html  geo.py  geo2.py  geo3.py  geo3D.py  geo4.py  kakao.py  map.html  search_result.xlsx  search_results.xlsx  강남역카페.xlsx  덕수궁.xlsx  스타벅스 경복궁역점.xlsx
